# BioDashboard-Arduino

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  main.py  measurements.py  models.py
app/bioscore/: __init__.py  baseline.py  calculator.py
app/charts/: __init__.py  realtime_chart.py
app/serial/: __init__.py  arduino_serial.py  parser.py  protocol.py
app/settings/: __init__.py  manager.py  model.py
app/storage/: __init__.py  exporter.py  session_store.py
app/ui/: main_window.py  sample_table_model.py  theme.py
app/ui/widgets/: __init__.py  event_log.py  metric_card.py  status_indicator.py
arduino/BioMonitorArduino/: BioMonitorArduino.ino
tests/: test_main_window.py  test_measurements.py  test_parser.py  test_settings.py  test_storage.py
