[project]
name = "biomonitor-dashboard"
version = "0.1.0"
description = "Desktop biomedical monitoring dashboard for Arduino-based physiological sensors."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.scripts]
biomonitor-dashboard = "app.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

