[project]
name = "biomonitor-dashboard"
version = "0.1.0"
description = "Desktop biomedical monitoring dashboard for Arduino-based physiological sensors."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PySide6>=6.7",
    "pyqtgraph>=0.13.7",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "mypy>=2.1",
    "ruff>=0.15",
]

[project.scripts]
biomonitor-dashboard = "app.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
